# faber-tweann

./: .gitignore  .tool-versions  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  ROADMAP.md  push.sh  rebar.config  update_test_setups.sh
design_docs/: ANALYSIS_SUMMARY.txt  DXNN2_CODEBASE_ANALYSIS.md  INDEX.md  README.md  code-analysis-god-modules.md  investigation-khepri-vs-mnesia.md
guides/: CUSTOM_MORPHOLOGIES.md  architecture.md  c4-architecture.md  diagram-index.md  enterprise-nifs.md  installation.md  ltc-evolution.md  ltc-usage-guide.md  native-nifs.md  neuron-types.md  overview.md  quickstart.md  tweann-basics.md
include/: records.hrl  types.hrl
native/faber_nn_nifs/: Cargo.toml
native/faber_nn_nifs/src/: lib.rs
plans/: PLAN_BRAIN_PUBSUB_REVIEW.md  PLAN_LEARNING_ARCHITECTURE.md  PLAN_TWEANN_MEMORY_AND_PROCESSING_OPTIMIZATION.md
priv/: build-nifs.sh
scripts/: check-links.sh  fix-html-links.sh  publish-to-hex.sh  publish-v0.15.3.sh  run_exp023_msi00.sh  validate-docs.sh
src/: actuator.erl  brain.erl  brain_learner.erl  brain_pubsub.erl  brain_sup.erl  brain_system.erl  constructor.erl  cortex.erl  crossover.erl  exoself.erl  faber_nn_nifs.erl  faber_tweann.app.src  faber_tweann_app.erl  faber_tweann_sup.erl  fitness_postprocessor.erl  flatland_sim.erl  functions.erl  genome_crossover.erl  genome_mutator.erl  genotype.erl  innovation.erl  ltc_dynamics.erl  ltc_mutations.erl  morphology.erl  morphology_behaviour.erl  morphology_registry.erl  mu_lambda_es.erl  multi_cue_tmaze_sim.erl  mutation_helpers.erl  network_compiler.erl  network_onnx.erl  (+30 more)
(+89 files in other folders)
