[package]
name = "faber_nn_nifs"
version = "0.1.0"
authors = ["rgfaber"]
edition = "2021"
description = "High-performance Rust NIFs for Faber Neuroevolution (Enterprise)"

[lib]
name = "faber_nn_nifs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.34"
rand = "0.8"
rand_distr = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
